apps/base/php-app/deployment-php.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: production
  name: php-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
      - name: php
        image: jkb91/php_docker:2.0
        ports:
        - containerPort: 80  # Zakładając, że aplikacja działa na porcie 80

---
apiVersion: v1
kind: Service
metadata:
  name: php-service
spec:
  type: ClusterIP
  selector:
    app: php
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80  # Port kontenera, do którego będzie kierowany ruch
