apps/base/php-app/deployment-sql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: production
  name: mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.7.26
        ports:
        - containerPort: 3306
        args:
        - "--ignore-db-dir=lost+found" 
        volumeMounts:
        - name: init-sql
          mountPath: /docker-entrypoint-initdb.d/init.sql
          subPath: init.sql
      volumes:
      - name: init-sql
        configMap:
          name: init-sql-config  # Zakładając, że masz ConfigMap o tej nazwie

---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
