apps/base/php-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-basics
  namespace: production
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: php-service
            port:
              number: 80
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: my-grafana
            port:
              number: 80
